--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "private": true,
   "scripts": {
-    "dev": "next dev -p 1701",
+    "dev": "doppler run --command='next dev -p 1701'",
     "build": "next build",
     "start": "next start",
     "export": "next export",
@@ -26,6 +26,7 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
+    "react-paypal-button-v2": "^2.6.3",
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
