--- a/package.json
+++ b/package.json
@@ -20,6 +20,8 @@
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.1",
     "dayjs": "^1.10.7",
+    "graphql": "^16.3.0",
+    "graphql-request": "^4.1.0",
     "next": "^12.0.8",
     "nookies": "^2.5.2",
     "postcss": "^8.4.6",
