--- a/package.json
+++ b/package.json
@@ -21,8 +21,8 @@
     "axios": "^0.26.1",
     "dayjs": "^1.10.7",
     "graphql": "^16.3.0",
-    "graphql-request": "^4.1.0",
-    "next": "^12.0.8",
+    "graphql-request": "^4.2.0",
+    "next": "^12.1.4",
     "nookies": "^2.5.2",
     "postcss": "^8.4.6",
     "react": "^17.0.2",
@@ -32,23 +32,16 @@
     "tailwindcss": "^3.0.23"
   },
   "devDependencies": {
-    "@types/gtag.js": "^0.0.9",
-    "@types/node": "^17.0.21",
-    "@types/react": "^17.0.39",
+    "@types/gtag.js": "^0.0.10",
+    "@types/node": "^17.0.23",
+    "@types/react": "^17.0.43",
     "@types/react-helmet": "^6.1.5",
-    "cssnano": "^5.0.17",
-    "prettier": "^2.5.1",
+    "cssnano": "^5.1.7",
+    "prettier": "^2.6.1",
     "standard-version": "^9.3.2",
-    "typescript": "^4.5.5"
+    "typescript": "^4.6.3"
   },
-  "peerDependencies": {
-    "color-string": "^1.6.0",
-    "elliptic": "^6.5.4",
-    "follow-redirects": "^1.14.7",
-    "glob-parent": "^6.0.2",
-    "lodash": "^4.17.21",
-    "nanoid": "^3.2.0",
-    "next": "^12.0.8",
-    "path-parse": "^1.0.7"
+  "resolutions": {
+    "minimist": "^1.2.6"
   }
 }
