--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "release": "standard-version -a -- --release-as minor"
   },
   "dependencies": {
-    "@emotion/react": "^11.5.0",
+    "@emotion/react": "^11.9.0",
     "@emotion/styled": "^11.3.0",
     "@headlessui/react": "^1.5.0",
     "@heroicons/react": "^1.0.6",
@@ -19,22 +19,23 @@
     "@tailwindcss/typography": "^0.5.2",
     "autoprefixer": "^10.4.2",
     "axios": "^0.26.1",
-    "dayjs": "^1.10.7",
+    "dayjs": "^1.11.1",
     "graphql": "^16.3.0",
     "graphql-request": "^4.2.0",
-    "next": "^12.1.4",
+    "next": "^12.1.5",
     "nookies": "^2.5.2",
     "postcss": "^8.4.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-helmet": "^6.1.0",
     "react-paypal-button-v2": "^2.6.3",
-    "tailwindcss": "^3.0.23"
+    "react-spinners": "^0.11.0",
+    "tailwindcss": "^3.0.24"
   },
   "devDependencies": {
     "@types/gtag.js": "^0.0.10",
-    "@types/node": "^17.0.23",
-    "@types/react": "^17.0.43",
+    "@types/node": "^17.0.25",
+    "@types/react": "^18.0.5",
     "@types/react-helmet": "^6.1.5",
     "cssnano": "^5.1.7",
     "prettier": "^2.6.2",
