--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.5.6",
   "private": true,
   "scripts": {
-    "dev": "doppler run --command='next dev -p 1701'",
-    "build": "next build",
-    "start": "next start",
-    "export": "next export",
+    "dev": "NEXT_PUBLIC_APP_VERSION=$npm_package_version doppler run --command='next dev -p 1701'",
+    "build": "NEXT_PUBLIC_APP_VERSION=$npm_package_version next build",
+    "start": "NEXT_PUBLIC_APP_VERSION=$npm_package_version next start",
+    "export": "NEXT_PUBLIC_APP_VERSION=$npm_package_version next export",
     "release": "standard-version -a -- --release-as minor"
   },
   "dependencies": {
