--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
     "typescript": "^5.2.2"
   },
   "resolutions": {
-    "semver": "^7.5.2"
+    "semver": "^7.5.2",
+    "@types/react": "^18.0.0"
   }
 }
