--- a/package.json
+++ b/package.json
@@ -19,13 +19,13 @@
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
-    "axios": "^1.5.0",
+    "axios": "^1.5.1",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
-    "next": "^13.5.2",
+    "next": "^13.5.4",
     "nookies": "^2.5.2",
-    "postcss": "^8.4.30",
+    "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
@@ -34,12 +34,12 @@
     "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.1",
+    "@commitlint/cli": "^17.7.2",
     "@commitlint/config-conventional": "^17.7.0",
-    "@types/gtag.js": "^0.0.14",
-    "@types/node": "^20.6.5",
-    "@types/react": "^18.2.22",
-    "@types/react-helmet": "^6.1.6",
+    "@types/gtag.js": "^0.0.16",
+    "@types/node": "^20.8.3",
+    "@types/react": "^18.2.25",
+    "@types/react-helmet": "^6.1.7",
     "cssnano": "^6.0.1",
     "husky": "^8.0.0",
     "lint-staged": "^14.0.1",
@@ -49,6 +49,7 @@
   },
   "resolutions": {
     "semver": "^7.5.2",
-    "@types/react": "^18.0.0"
+    "@types/react": "^18.0.0",
+    "postcss": "^8.4.31"
   }
 }
