--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "postcss": "^8.4.31",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-helmet": "^6.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-spinners": "^0.13.8",
     "tailwindcss": "^3.3.3"
