--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "@tailwindcss/forms": "^0.5.6",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
-    "axios": "^1.5.1",
+    "axios": "^1.6.1",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
-    "next": "^13.5.4",
+    "next": "^14.0.2",
     "nookies": "^2.5.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
@@ -31,18 +31,18 @@
     "react-helmet-async": "^1.3.0",
     "react-paypal-button-v2": "^2.6.3",
     "react-spinners": "^0.13.8",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^17.7.2",
-    "@commitlint/config-conventional": "^17.7.0",
-    "@types/gtag.js": "^0.0.16",
-    "@types/node": "^20.8.3",
-    "@types/react": "^18.2.25",
-    "@types/react-helmet": "^6.1.7",
+    "@commitlint/cli": "^18.2.0",
+    "@commitlint/config-conventional": "^18.1.0",
+    "@types/gtag.js": "^0.0.18",
+    "@types/node": "^20.9.0",
+    "@types/react": "^18.2.37",
+    "@types/react-helmet": "^6.1.9",
     "cssnano": "^6.0.1",
     "husky": "^8.0.0",
-    "lint-staged": "^14.0.1",
+    "lint-staged": "^15.0.2",
     "prettier": "^3.0.3",
     "standard-version": "^9.5.0",
     "typescript": "^5.2.2"
@@ -51,5 +51,6 @@
     "semver": "^7.5.2",
     "@types/react": "^18.0.0",
     "postcss": "^8.4.31"
-  }
+  },
+  "packageManager": "yarn@4.0.1"
 }
