--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "@headlessui/react": "^1.7.17",
     "@heroicons/react": "^2.0.18",
     "@tailwindcss/aspect-ratio": "^0.4.2",
-    "@tailwindcss/forms": "^0.5.6",
+    "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
     "autoprefixer": "^10.4.16",
-    "axios": "^1.6.1",
+    "axios": "^1.6.2",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
-    "next": "^14.0.2",
+    "next": "13.4.19",
     "nookies": "^2.5.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
@@ -35,16 +35,16 @@
     "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.2.0",
-    "@commitlint/config-conventional": "^18.1.0",
+    "@commitlint/cli": "^18.4.1",
+    "@commitlint/config-conventional": "^18.4.0",
     "@types/gtag.js": "^0.0.18",
     "@types/node": "^20.9.0",
     "@types/react": "^18.2.37",
     "@types/react-helmet": "^6.1.9",
     "cssnano": "^6.0.1",
     "husky": "^8.0.0",
-    "lint-staged": "^15.0.2",
-    "prettier": "^3.0.3",
+    "lint-staged": "^15.1.0",
+    "prettier": "^3.1.0",
     "standard-version": "^9.5.0",
     "typescript": "^5.2.2"
   }
