--- a/package.json
+++ b/package.json
@@ -2,12 +2,11 @@
   "name": "patrickfilm",
   "version": "1.5.15",
   "private": true,
-  "packageManager": "yarn@4.0.1",
   "scripts": {
     "dev": "NEXT_PUBLIC_APP_VERSION=$npm_package_version doppler run --command='next dev -p 1701'",
     "build": "NEXT_PUBLIC_APP_VERSION=$npm_package_version next build",
     "start": "NEXT_PUBLIC_APP_VERSION=$npm_package_version next start",
-    "export": "NEXT_PUBLIC_APP_VERSION=$npm_package_version next export",
+    "export": "next export",
     "release": "standard-version -a -- --release-as minor",
     "prepare": "husky install"
   },
