--- a/package.json
+++ b/package.json
@@ -23,7 +23,7 @@
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
-    "next": "13.4.9",
+    "next": "^14.0.2",
     "nookies": "^2.5.2",
     "postcss": "^8.4.31",
     "react": "^18.2.0",
