--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "build": "NEXT_PUBLIC_APP_VERSION=$npm_package_version next build",
     "start": "NEXT_PUBLIC_APP_VERSION=$npm_package_version next start",
     "release": "standard-version -a -- --release-as minor",
-    "prepare": "husky install"
+    "prepare": "husky"
   },
   "dependencies": {
     "@emotion/react": "^11.11.3",
@@ -17,12 +17,12 @@
     "@tailwindcss/aspect-ratio": "^0.4.2",
     "@tailwindcss/forms": "^0.5.7",
     "@tailwindcss/typography": "^0.5.10",
-    "autoprefixer": "^10.4.16",
-    "axios": "^1.6.5",
+    "autoprefixer": "^10.4.17",
+    "axios": "^1.6.7",
     "dayjs": "^1.11.10",
     "graphql": "^16.8.1",
     "graphql-request": "^6.1.0",
-    "next": "^14.0.4",
+    "next": "^14.1.0",
     "nookies": "^2.5.2",
     "postcss": "^8.4.33",
     "react": "^18.2.0",
@@ -33,16 +33,16 @@
     "tailwindcss": "^3.4.1"
   },
   "devDependencies": {
-    "@commitlint/cli": "^18.4.4",
-    "@commitlint/config-conventional": "^18.4.4",
+    "@commitlint/cli": "^18.6.0",
+    "@commitlint/config-conventional": "^18.6.0",
     "@types/gtag.js": "^0.0.18",
-    "@types/node": "^20.10.7",
-    "@types/react": "^18.2.47",
+    "@types/node": "^20.11.10",
+    "@types/react": "^18.2.48",
     "@types/react-helmet": "^6.1.11",
     "cssnano": "^6.0.3",
-    "husky": "^8.0.0",
+    "husky": "^9.0.7",
     "lint-staged": "^15.2.0",
-    "prettier": "^3.1.1",
+    "prettier": "^3.2.4",
     "standard-version": "^9.5.0",
     "typescript": "^5.3.3"
   }
